# antevolve

./: .dockerignore  1_build_local_worker.sh  2_run_local_workers.sh  3_run_local_controller.sh  4_run_experiment.sh  5_controller_logs.sh  6_worker_logs.sh  7_stop_local_service.sh  8_extract_best.sh  9_analyse_database.sh  Dockerfile  README.md  clean.sh  pyproject.toml  requirements.txt
best/: README.md  best_gemini_2k.py  best_gemini_a.py  best_gemini_b.py  best_qwen_a.py  best_qwen_b.py
evaluate/: README.md  evaluate_on_data.py  requirements.txt
evaluate/data/: aeu_airlines00.json  aeu_airlines01.json  aeu_airlines02.json  aeu_airlines03.json  aeu_airlines04.json  aeu_airlines05.json  aeu_airlines06.json  aeu_airlines07.json  aeu_airlines08.json  aeu_airlines09.json  aeu_airlines10.json  aeu_airlines11.json  aeu_airlines12.json  aeu_airlines13.json  aeu_airlines14.json  aeu_airlines15.json  aeu_airlines16.json  aeu_airlines17.json  aeu_airlines18.json  aeu_airlines19.json  aeuroroad00.json  aeuroroad01.json  aeuroroad02.json  aeuroroad03.json  aeuroroad04.json  aeuroroad05.json  aeuroroad06.json  aeuroroad07.json  aeuroroad08.json  aeuroroad09.json  aeuroroad10.json  aeuroroad11.json  aeuroroad12.json  aeuroroad13.json  aeuroroad14.json  aeuroroad15.json  aeuroroad16.json  aeuroroad17.json  aeuroroad18.json  aeuroroad19.json
experiment/: evaluator.py  experiment.py  program.py
src/antevolve/: utils.py
src/antevolve/controller/: client.py  models_config.py  service.py  worker_client.py  (+1 more)
tools/: db_analyse.py  db_test.pkl  extract_best_program.py
(+19 files in other folders)
