[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antevolve"
version = "0.3.1"
readme = "README.md"
dependencies = [
    "absl-py",
    "fastapi>=0.100.0",
    "fastapi-utils>=0.2.1",
    "httpx>=0.25.0",
    "python-multipart",  # Required for controller file uploads
    "numpy",             # Required for controller database
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pylint",
    "pillow",
    "setuptools>=61.0.0",
    "tenacity>=8.2.3",
    "typing_inspect>=0.7.1",
    "uvicorn>=0.20.0",
    "wheel>=0.37.0",
]

[project.scripts]
worker = "antevolve.worker.service:run"
controller = "antevolve.controller.service:run"
